{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 37,
  "lineage": "3f6b1638-00d2-cb64-7c28-73aeeda66690",
  "resources": [
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:loadbalancer/app/test-lb-tf/cb5525fd971a3b8c",
            "arn_suffix": "app/test-lb-tf/cb5525fd971a3b8c",
            "dns_name": "test-lb-tf-718880545.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:loadbalancer/app/test-lb-tf/cb5525fd971a3b8c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0c0cb21a890b120ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0144feb23ea1f0c7f"
              },
              {
                "subnet_id": "subnet-0472d45b39e817ebf"
              },
              {
                "subnet_id": "subnet-062564d9818860315"
              }
            ],
            "subnets": [
              "subnet-0144feb23ea1f0c7f",
              "subnet-0472d45b39e817ebf",
              "subnet-062564d9818860315"
            ],
            "vpc_id": "vpc-028a5058092be1473",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_a",
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_b",
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_c",
            "module.ecs-ecr-load_balancer.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:subnet/subnet-0472d45b39e817ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-0472d45b39e817ebf",
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "vpc_id": "vpc-028a5058092be1473"
          }
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:subnet/subnet-062564d9818860315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-062564d9818860315",
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "vpc_id": "vpc-028a5058092be1473"
          }
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:subnet/subnet-0144feb23ea1f0c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0144feb23ea1f0c7f",
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "vpc_id": "vpc-028a5058092be1473"
          }
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:vpc/vpc-028a5058092be1473",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0910559313a85cdbb",
            "default_route_table_id": "rtb-0e5e34100b9286576",
            "default_security_group_id": "sg-05ab0a40b8da71599",
            "dhcp_options_id": "dopt-042ca95c46f57049b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-028a5058092be1473",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5e34100b9286576",
            "owner_id": "039827580846"
          }
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:listener/app/test-lb-tf/cb5525fd971a3b8c/4a2f5dae1cad7dc8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:targetgroup/target-group/cac1fddf172b5101",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:listener/app/test-lb-tf/cb5525fd971a3b8c/4a2f5dae1cad7dc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:loadbalancer/app/test-lb-tf/cb5525fd971a3b8c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-ecr-load_balancer.aws_alb.application_load_balancer",
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_a",
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_b",
            "module.ecs-ecr-load_balancer.aws_default_subnet.default_subnet_c",
            "module.ecs-ecr-load_balancer.aws_default_vpc.default_vpc",
            "module.ecs-ecr-load_balancer.aws_lb_target_group.target_group",
            "module.ecs-ecr-load_balancer.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:targetgroup/target-group/cac1fddf172b5101",
            "arn_suffix": "targetgroup/target-group/cac1fddf172b5101",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:039827580846:targetgroup/target-group/cac1fddf172b5101",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-028a5058092be1473"
          },
          "dependencies": [
            "module.ecs-ecr-load_balancer.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:security-group/sg-0c0cb21a890b120ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0cb21a890b120ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220505100852691700000001",
            "name_prefix": null,
            "owner_id": "039827580846",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-028a5058092be1473"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs-ecr-load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "module.ecs-ecr-load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:039827580846:security-group/sg-02995cefde67697dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02995cefde67697dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c0cb21a890b120ba"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220505102017341700000001",
            "name_prefix": null,
            "owner_id": "039827580846",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-028a5058092be1473"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-ecr-load_balancer.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}